# char8

./: .clang-format  CMakeLists.txt  README.md
include/char8/: char8.hpp  jis.hpp  sjis.hpp  unicode.blocks.hpp  unicode.hpp  unicode_jisx0213.map.hpp  utf8.hpp
scripts/: JIS0208.py  jisx0213.py  unicode_blocks.py
tests/: sjis_test.cpp  unicode_test.cpp  utf8_test.cpp
